--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://alefesta.github.io/fuse-beta.github.io/"
+baseURL = "https://fuseml.github.io/"
 languageCode = "en-us"
 title = "FuseML"
 theme = "hallo"
