--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "FuseML"
 theme = "hallo"
 disableKinds = ["page", "section", "taxonomy", "taxonomyTerm"]
-googleAnalytics = "G-FFKPRJHXQJ"
+googleAnalytics = "G-FVW6PDRRKC"
 
 [Author]
     name = "Flexible Universal SErvice orchestrator for Machine Learning"
