--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hallo"]
 	path = themes/hallo
 	url = https://github.com/EmielH/hallo-hugo.git
+[submodule "themes/hugo-fresh"]
+	path = themes/hugo-fresh
+	url = git@github.com:ories/hugo-fresh.git
